--- a/leap_year_or_not.html
+++ b/leap_year_or_not.html
@@ -10,17 +10,13 @@
     function main()
     {
         let year = Number(prompt("enter year"));
-        if (year % 400 == 0 && year % 100 == 0)
-        {
+        if ((year % 4 == 0) && (year % 400 == 0 || year % 100 != 0))
+        {   
             console.log(`${year} is leap_year`);
-        }
-        else if(year % 4 == 0)
-        {
-            console.log(`${year} is leap_year`)
         }
         else
         {
-            console.log(`${year} is not a leap_year`)
+            console.log(`${year} is not a leap_year`);
         }
     }
     main();
